--- a/applications/registration-server/src/test/resources/application.properties
+++ b/applications/registration-server/src/test/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tracker_registration_test?useS
 #registration.server.endpoint=http://localhost:8883
 registration.server.endpoint=http://registration-server
 management.endpoint.health.show-details=always
+application.oauth-enabled=false
