--- a/applications/server.gradle
+++ b/applications/server.gradle
@@ -23,11 +23,17 @@ dependencies {
     testCompile project(":components:test-support")
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry"
+    compile "io.pivotal.spring.cloud:spring-cloud-services-starter-config-client"
 }
 
 bootRun.environment([
         "APPLICATION_OAUTH_ENABLED": true,
         "SECURITY_OAUTH2_CLIENT_CLIENT_ID": "tracker-client",
+        "REGISTRATION_SERVER_ENDPOINT": "http://registration-server",
         "SECURITY_OAUTH2_CLIENT_CLIENT_SECRET": "supersecret"
+])
+
+test.environment([
+        "REGISTRATION_SERVER_ENDPOINT": "http://registration-server"
 ])
 
